--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <title>Document</title>
 </head>
 <body>
-        <figure id="main-message"></figure>
+        <main>
+                <figure id="message-area"></figure>
+                <figure id="button-area"></figure>
+        </main>
         <script src="./script.js"></script> 
 </body>
 </html>
