--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <title>Document</title>
 </head>
 <body>
+        <header>
+                <figure id="score-display"></figure>
+                <figure id="timer-display">Time remaining: 0</figure>
+        </header>
         <main>
                 <figure id="message-area"></figure>
                 <figure id="button-area"></figure>
